--- a/P3_Patrouillault_eric/index.html
+++ b/P3_Patrouillault_eric/index.html
@@ -12,6 +12,9 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="sass/style.css" type="text/css">
   <title>ohmyfood</title>
+
+  <scrip src="app.js"></scrip>
+
 </head>
 
 <body>
@@ -33,14 +36,67 @@
       <div class="search__restaurant">
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <button class="search__btn" type="submit">Explorer nos restaurants</button>
+        <a href="#"><button class="btn search__btn" type="submit">Explorer nos restaurants</button></a>
       </div>
     </section>
+    <!-- End Search -->
 
     <!-- Functionning -->
-    <section>
+    <section class="functionning">
+      <h2>Fonctionnement</h2>
+      <!-- list -->
+      <ol class="functionning__list">
+        <li>
+          <div class="functionning__icon">
+            <span class="functionning__step">1</span>
+            <i class="fas fa-mobile-alt"></i>
+            <button class="btn functionning__btn">Choisissez un restaurant</button>
+          </div>
+        </li>
+        <li>
+          <div class="functionning__icon">
+            <span class="functionning__step">2</span>
+            <i class="fas fa-list-ul"></i>
+            <button class="btn functionning__btn">Composez votre menu</button>
+          </div>
+        </li>
+        <li>
+          <div class="functionning__icon">
+            <span class="functionning__step">3</span>
+            <i class="fas fa-store"></i>
+            <button class="btn functionning__btn btn-3">Dégustez au restaurant</button>
+          </div>
+        </li>
+      </ol>
+    </section>
+    <!-- End Functionning -->
+
+    <!-- Restaurants -->
+    <section class="cards-container">
+      <h2>Restaurants</h2>
+
+      <!-- Cards -->
+      <ul class="restaurants__list">
+
+        <!--Card-->
+        <li class="restaurants__card">
+          <a href="#">
+            <div>
+              <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" />
+            </div>
+            <div class="restaurants">
+              <p class="restaurants__name">La palette du goût</p>
+              <p">Ménilmontant</p>
+            </div>
+          </a>
+        </li>
+        <!-- End card -->
+
+      </ul>
+      <!-- End Cards-->
 
     </section>
+    <!-- End Restaurants -->
 
 
   </main>
