--- a/P3_Patrouillault_eric/index.html
+++ b/P3_Patrouillault_eric/index.html
@@ -12,14 +12,12 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="sass/style.css" type="text/css">
   <title>ohmyfood</title>
-
   <scrip src="app.js"></scrip>
-
 </head>
 
 <body>
   <header>
-    <a class="header__logo" href="#">
+    <a class="header__logo" href="index.html">
       <img src="images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood" />
     </a>
   </header>
@@ -28,16 +26,18 @@
 
     <!-- Search -->
     <section>
-      <div class="search__city">
-        <i class="fas fa-map-marker-alt"></i>
-        <input class="search__input" type="text" value="Paris, Belleville" />
-      </div>
+      <form>
+        <div class="search__city">
+          <i class="fas fa-map-marker-alt"></i>
+          <input class="search__input" type="text" value="Paris, Belleville" />
+        </div>
 
-      <div class="search__restaurant">
-        <h1>Réservez le menu qui vous convient</h1>
-        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <a href="#"><button class="btn search__btn" type="submit">Explorer nos restaurants</button></a>
-      </div>
+        <div class="search__restaurant">
+          <h1>Réservez le menu qui vous convient</h1>
+          <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+          <button class="btn search__btn" type="submit">Explorer nos restaurants</button>
+        </div>
+      </form>
     </section>
     <!-- End Search -->
 
@@ -47,46 +47,93 @@
       <!-- list -->
       <ol class="functionning__list">
         <li>
-          <div class="functionning__icon">
-            <span class="functionning__step">1</span>
+          <div class="functionning__list step">
+            <span class="functionning__list step number">1</span>
             <i class="fas fa-mobile-alt"></i>
             <button class="btn functionning__btn">Choisissez un restaurant</button>
           </div>
         </li>
         <li>
-          <div class="functionning__icon">
-            <span class="functionning__step">2</span>
+          <div class="functionning__list step">
+            <span class="functionning__list step number">2</span>
             <i class="fas fa-list-ul"></i>
             <button class="btn functionning__btn">Composez votre menu</button>
           </div>
         </li>
         <li>
-          <div class="functionning__icon">
-            <span class="functionning__step">3</span>
+          <div class="functionning__list step">
+            <span class="functionning__list step number">3</span>
             <i class="fas fa-store"></i>
-            <button class="btn functionning__btn btn-3">Dégustez au restaurant</button>
+            <button class="btn functionning__btn">Dégustez au restaurant</button>
           </div>
         </li>
       </ol>
     </section>
     <!-- End Functionning -->
 
-    <!-- Restaurants -->
+    <!-- List Restaurants -->
     <section class="cards-container">
-      <h2>Restaurants</h2>
+      <h2 class="restaurants__title">Restaurants</h2>
 
       <!-- Cards -->
       <ul class="restaurants__list">
 
         <!--Card-->
-        <li class="restaurants__card">
-          <a href="#">
+        <li class="restaurants__list card">
+          <a href="menu-1.html">
             <div>
               <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" />
             </div>
-            <div class="restaurants">
-              <p class="restaurants__name">La palette du goût</p>
-              <p">Ménilmontant</p>
+            <div class="restaurants__list card txt">
+              <p class="restaurants__list card name">La palette du goût</p>
+              <i class="far fa-heart"></i>
+              <p class="restaurants__list card city">Ménilmontant</p>
+            </div>
+          </a>
+        </li>
+        <!-- End card -->
+
+        <!--Card-->
+        <li class="restaurants__list card">
+          <a href="menu-2.html">
+            <div>
+              <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
+            </div>
+            <div class="restaurants__list card txt">
+              <p class="restaurants__list card name">La note enchantée</p>
+              <i class="far fa-heart"></i>
+              <p class="restaurants__list card city">Charonne</p>
+            </div>
+          </a>
+        </li>
+        <!-- End card -->
+
+        <!--Card-->
+        <li class="restaurants__list card">
+          <a href="menu-3.html">
+            <div>
+              <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" />
+            </div>
+            <div class="restaurants__list card txt">
+              <p class="restaurants__list card name">À la française</p>
+              <i class="far fa-heart"></i>
+              <p class="restaurants__list card city">Cité Rouge</p>
+            </div>
+          </a>
+        </li>
+        <!-- End card -->
+
+        <!--Card-->
+        <li class="restaurants__list card">
+          <a href="menu-4.html">
+            <div>
+              <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="Le délice des sens" />
+            </div>
+            <div class="restaurants__list card txt">
+              <p class="restaurants__list card name">Le délice des sens</p>
+              <i class="far fa-heart"></i>
+              <p class="restaurants__list card city">Folie-Méricourt</p>
             </div>
           </a>
         </li>
@@ -96,12 +143,23 @@
       <!-- End Cards-->
 
     </section>
-    <!-- End Restaurants -->
+    <!-- End List Restaurants -->
 
 
   </main>
 
-  <footer></footer>
+  <footer class="footer">
+    
+      <h3 class="footer title">ohmyfood</h3>
+      <ul class="footer list">
+        <li>Proposer un restaurant</li>
+        <li>Devenir partenaire</li>
+        <li>Mentions légales</li>
+        <li>Contact</li>
+      </ul>
+    
+  </footer>
+
 </body>
 
 </html>
