--- a/P3_Patrouillault_eric/index.html
+++ b/P3_Patrouillault_eric/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+  
+  <div class="loader"></div>
+  
   <header>
     <a class="header__logo" href="index.html">
       <img src="images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood" />
@@ -29,7 +32,7 @@
       <form>
         <div class="search__city">
           <i class="fas fa-map-marker-alt"></i>
-          <input class="search__input" type="text" value="Paris, Belleville" />
+          <input class="search__city search__input" type="text" value="Paris, Belleville" />
         </div>
 
         <div class="search__restaurant">
@@ -47,22 +50,22 @@
       <!-- list -->
       <ol class="functionning__list">
         <li>
-          <div class="functionning__list step">
-            <span class="functionning__list step number">1</span>
+          <div class="functionning__list functionning__step">
+            <span class="functionning__list functionning__step functionning__number">1</span>
             <i class="fas fa-mobile-alt"></i>
             <button class="btn functionning__btn">Choisissez un restaurant</button>
           </div>
         </li>
         <li>
-          <div class="functionning__list step">
-            <span class="functionning__list step number">2</span>
+          <div class="functionning__list functionning__step">
+            <span class="functionning__list functionning__step functionning__number">2</span>
             <i class="fas fa-list-ul"></i>
             <button class="btn functionning__btn">Composez votre menu</button>
           </div>
         </li>
         <li>
-          <div class="functionning__list step">
-            <span class="functionning__list step number">3</span>
+          <div class="functionning__list functionning__step">
+            <span class="functionning__list functionning__step functionning__number">3</span>
             <i class="fas fa-store"></i>
             <button class="btn functionning__btn">Dégustez au restaurant</button>
           </div>
@@ -79,61 +82,63 @@
       <ul class="restaurants__list">
 
         <!--Card-->
-        <li class="restaurants__list card">
+        <li class="restaurants__list restaurants__card">
           <a href="menu-1.html">
-            <div>
+            <div class="new__contenant">
               <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" />
+              <div class="new__contenant new__txt">Nouveau</div>
             </div>
-            <div class="restaurants__list card txt">
-              <p class="restaurants__list card name">La palette du goût</p>
+            <div class="restaurants__list restaurants__card restaurants__txt">
+              <p class="restaurants__list restaurants__card restaurants__txt restaurants__name">La palette du goût</p>
               <i class="far fa-heart"></i>
-              <p class="restaurants__list card city">Ménilmontant</p>
+              <p class="restaurants__list restaurants__card restaurants__txt restaurants__city">Ménilmontant</p>
             </div>
           </a>
         </li>
         <!-- End card -->
 
         <!--Card-->
-        <li class="restaurants__list card">
+        <li class="restaurants__list restaurants__card">
           <a href="menu-2.html">
-            <div>
+            <div class="new__contenant">
               <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
+              <div class="new__contenant new__txt">Nouveau</div>
             </div>
-            <div class="restaurants__list card txt">
-              <p class="restaurants__list card name">La note enchantée</p>
+            <div class="restaurants__list restaurants__card restaurants__txt">
+              <p class="restaurants__list restaurants__card restaurants__txt restaurants__name">La note enchantée</p>
               <i class="far fa-heart"></i>
-              <p class="restaurants__list card city">Charonne</p>
+              <p class="restaurants__list restaurants__card restaurants__txt restaurants__city">Charonne</p>
             </div>
           </a>
         </li>
         <!-- End card -->
 
         <!--Card-->
-        <li class="restaurants__list card">
+        <li class="restaurants__list restaurants__card">
           <a href="menu-3.html">
             <div>
-              <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" />
+              <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash2.jpg" alt="À la française" />
             </div>
-            <div class="restaurants__list card txt">
-              <p class="restaurants__list card name">À la française</p>
+            <div class="restaurants__list restaurants__card restaurants__txt">
+              <p class="restaurants__list restaurants__card restaurants__txt restaurants__name">À la française</p>
               <i class="far fa-heart"></i>
-              <p class="restaurants__list card city">Cité Rouge</p>
+              <p class="restaurants__list restaurants__card restaurants__txt restaurants__city">Cité Rouge</p>
             </div>
           </a>
         </li>
         <!-- End card -->
 
         <!--Card-->
-        <li class="restaurants__list card">
+        <li class="restaurants__list restaurants__card">
           <a href="menu-4.html">
             <div>
               <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Le délice des sens" />
             </div>
-            <div class="restaurants__list card txt">
-              <p class="restaurants__list card name">Le délice des sens</p>
+            <div class="restaurants__list restaurants__card restaurants__txt">
+              <p class="restaurants__list restaurants__card restaurants__txt restaurants__name">Le délice des sens</p>
               <i class="far fa-heart"></i>
-              <p class="restaurants__list card city">Folie-Méricourt</p>
+              <p class="restaurants__list restaurants__card restaurants__txt restaurants__city">Folie-Méricourt</p>
             </div>
           </a>
         </li>
@@ -145,19 +150,30 @@
     </section>
     <!-- End List Restaurants -->
 
-
   </main>
 
   <footer class="footer">
-    
-      <h3 class="footer title">ohmyfood</h3>
-      <ul class="footer list">
-        <li>Proposer un restaurant</li>
-        <li>Devenir partenaire</li>
-        <li>Mentions légales</li>
-        <li>Contact</li>
-      </ul>
-    
+    <a href="index.html">
+      <img src="images/logo/ohmyfood2.png" alt="Logo ohmyfood" />
+    </a>
+    <ul class="footer footer__list">
+      <li class="footer footer__list footer__txt">
+        <i class="fas fa-utensils"></i>
+        <p>Proposer un restaurant</p>
+      </li>
+      <li class="footer footer__list footer__txt">
+        <i class="fas fa-hands-helping"></i>
+        <p>Devenir partenaire</p>
+      </li>
+      <li class="footer footer__list footer__txt">
+        <p>Mentions légales</p>
+      </li>
+      <a href="mailto:ohmyfoodRetul1981@gustr.com">
+        <li class="footer footer__list footer__txt">
+          <p>Contact</p>
+        </li>
+      </a>
+    </ul>
   </footer>
 
 </body>
