--- a/P3_Patrouillault_eric/menu-1.html
+++ b/P3_Patrouillault_eric/menu-1.html
@@ -36,7 +36,30 @@
     <!-- End Search -->
   </main>
 
-  <footer></footer>
+  <footer class="footer">
+    <a href="index.html">
+      <img src="images/logo/ohmyfood2.png" alt="Logo ohmyfood" />
+    </a>
+    <ul class="footer footer__list">
+      <li class="footer footer__list footer__txt">
+        <i class="fas fa-utensils"></i>
+        <p>Proposer un restaurant</p>
+      </li>
+      <li class="footer footer__list footer__txt">
+        <i class="fas fa-hands-helping"></i>
+        <p>Devenir partenaire</p>
+      </li>
+      <li class="footer footer__list footer__txt">
+        <p>Mentions légales</p>
+      </li>
+      <a href="mailto:ohmyfoodRetul1981@gustr.com">
+        <li class="footer footer__list footer__txt">
+          <p>Contact</p>
+        </li>
+      </a>
+    </ul>
+  </footer>
+  
 </body>
 
 </html>
