--- a/P3_Patrouillault_eric/menu-1.html
+++ b/P3_Patrouillault_eric/menu-1.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Shrikhand&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,7 +19,11 @@
 </head>
 
 <body>
-  <header>
+
+  <header class="header">
+    <a href="index.html">
+      <i class="fas fa-arrow-left"></i>
+    </a>
     <a class="header__logo" href="index.html">
       <img src="images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood" />
     </a>
@@ -26,14 +31,40 @@
 
   <main>
 
-    <!-- Search -->
-    <section>
-      <div id="menu-1">
-       
-       
+    <!-- Menu -->
+    <section class="menu">
+      <div id="menu-1" class="menu__img">
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+      </div>
+      <div class="menu__restaurants">
+        <h1>La palette du goût</h1>
+        <i id="heart-menu" class="far fa-heart"></i>
+
+        <div class="menu__starter">
+          <p class="menu__starter starter__title">ENTRÉES</p>
+
+          <div class="menu__starter menu__card ">
+            <div class="menu__starter menu__card txt">
+              <h3 class="menu__starter menu__card txt name">Fricassée d'escargot</h3>
+              <p class="menu__starter menu__card txt accompaniment">Au piment d'espelette</p>
+            </div>
+            <div class="menu__starter menu__card price">25€</div>
+            <div class="menu__starter menu__card validate">
+              <i class="fas fa-check-circle" aria-hidden="true"></i>
+            </div>
+          </div>
+
+
+
+        </div>
+
+
+        <div class="menu__dish"></div>
+        <div class="menu__dessert"></div>
       </div>
     </section>
-    <!-- End Search -->
+    <!-- End Menu -->
+
   </main>
 
   <footer class="footer">
@@ -59,7 +90,7 @@
       </a>
     </ul>
   </footer>
-  
+
 </body>
 
 </html>
