--- a/P3_Patrouillault_eric/menu-2.html
+++ b/P3_Patrouillault_eric/menu-2.html
@@ -12,7 +12,7 @@
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="sass/style.css" type="text/css">
-  <title>ohmyfood:La palette du goût</title>
+  <title>ohmyfood:La note enchantée</title>
 
   <scrip src="app.js"></scrip>
 
@@ -34,10 +34,10 @@
     <!-- Image Menu -->
     <section>
       <div class="menu__img">
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
       </div>
       <div class="menu__restaurants">
-        <h1>La palette du goût</h1>
+        <h1>La note enchantée</h1>
         <i id="heart-menu" class="far fa-heart"></i>
       </div>
     </section>
@@ -51,8 +51,8 @@
         <p class="title">ENTRÉES</p>
         <div class="card card-1">
           <div class="txt">
-            <h3 class="txt name">Fricassée d'escargot</h3>
-            <p class="txt accompaniment">Au piment d'espelette</p>
+            <h3 class="txt name">Ravioles de foie gras</h3>
+            <p class="txt accompaniment">Accompagnés de leur crème à la truffe</p>
           </div>
           <div class="card price">25€</div>
           <div class="card validate">
@@ -61,8 +61,8 @@
         </div>
         <div class="card card-2">
           <div class="txt">
-            <h3 class="txt name">Foie gras de canard mi-cuit</h3>
-            <p class="txt accompaniment">Et ses copeaux de truffe noire</p>
+            <h3 class="txt name">Caviar osciètre</h3>
+            <p class="txt accompaniment">Sur blini à la farine de blé noir</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -71,10 +71,20 @@
         </div>
         <div class="card card-3">
           <div class="txt">
-            <h3 class="txt name">Oeuf au plat</h3>
-            <p class="txt accompaniment">Assaisonné à la truffe sur lit de caviar</p>
+            <h3 class="txt name">Homard et espuma de potiron</h3>
+            <p class="txt accompaniment">Mariné aux zestes d'orange</p>
           </div>
           <div class="card price">20€</div>
+          <div class="card validate">
+            <i class="fas fa-check-circle " aria-hidden="true"></i>
+          </div>
+        </div>
+        <div class="card card-4">
+          <div class="txt">
+            <h3 class="txt name">Foie gras de canard cuit entier</h3>
+            <p class="txt accompaniment">Confiture de figue et pain toasté</p>
+          </div>
+          <div class="card price">35€</div>
           <div class="card validate">
             <i class="fas fa-check-circle " aria-hidden="true"></i>
           </div>
@@ -87,8 +97,8 @@
         <p class="title">PLATS</p>
         <div class="card card-1">
           <div class="txt">
-            <h3 class="txt name">Filet de boeuf aux herbes</h3>
-            <p class="txt accompaniment">Accompagné de sa ribambelle de légumes</p>
+            <h3 class="txt name">Noix de coquilles Saint-Jacques</h3>
+            <p class="txt accompaniment">Sur lit de purée de céleri-rave</p>
           </div>
           <div class="card price">40€</div>
           <div class="card validate">
@@ -97,8 +107,8 @@
         </div>
         <div class="card card-2">
           <div class="txt">
-            <h3 class="txt name">Parmentier de queue de boeuf</h3>
-            <p class="txt accompaniment">À la truffe noire sur sa purée de panais</p>
+            <h3 class="txt name">Langoustine poêlée</h3>
+            <p class="txt accompaniment">Purée de patate douce</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -107,8 +117,8 @@
         </div>
         <div class="card card-3">
           <div class="txt">
-            <h3 class="txt name">Filet de turbot</h3>
-            <p class="txt accompaniment">Aux agrumes</p>
+            <h3 class="txt name">Mijoté de queue de boeuf</h3>
+            <p class="txt accompaniment">Et riz sauvage aux zestes de citron</p>
           </div>
           <div class="card price">44€</div>
           <div class="card validate">
@@ -119,12 +129,12 @@
       <!-- End menu dish -->
 
       <!-- Menu dessert-->
-      <section class="part-menu">
+      <section>
         <p class="title">DESSERTS</p>
         <div class="card card-1">
           <div class="txt">
-            <h3 class="txt name">Paris-Brest</h3>
-            <p class="txt accompaniment">Revisité</p>
+            <h3 class="txt name">Macaron noisette et chocolat</h3>
+            <p class="txt accompaniment">Glace au caramel brun et sel de Guérande</p>
           </div>
           <div class="card price">18€</div>
           <div class="card validate">
@@ -133,8 +143,8 @@
         </div>
         <div class="card card-2">
           <div class="txt">
-            <h3 class="txt name">Macaron au chocolat d'exception</h3>
-            <p class="txt accompaniment">Et glace à la vanille de Madagascar</p>
+            <h3 class="txt name">Baba au rhum revisité</h3>
+            <p class="txt accompaniment">Avec son coulis de citron</p>
           </div>
           <div class="card price">22€</div>
           <div class="card validate">
@@ -143,8 +153,8 @@
         </div>
         <div class="card card-3">
           <div class="txt">
-            <h3 class="txt name">Mousse au chocolat</h3>
-            <p class="txt accompaniment">Au piment d'Espelette et à la truffe noire</p>
+            <h3 class="txt name">Tarte au citron meringuée</h3>
+            <p class="txt accompaniment">Déstructurée</p>
           </div>
           <div class="card price">23€</div>
           <div class="card validate">
