--- a/P3_Patrouillault_eric/index.html
+++ b/P3_Patrouillault_eric/index.html
@@ -36,7 +36,7 @@
           <input class="search__city search__input" type="text" value="Paris, Belleville" />
         </div>
 
-        <div class="search__restaurant">
+        <div class="search-and-command">
           <h1>Réservez le menu qui vous convient</h1>
           <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
           <button class="btn search__btn" type="submit">Explorer nos restaurants</button>
