--- a/P3_Patrouillault_eric/menu-3.html
+++ b/P3_Patrouillault_eric/menu-3.html
@@ -12,7 +12,7 @@
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="sass/style.css" type="text/css">
-  <title>ohmyfood:La palette du goût</title>
+  <title>ohmyfood:À la française</title>
 
   <scrip src="app.js"></scrip>
 
@@ -34,10 +34,10 @@
     <!-- Image Menu -->
     <section>
       <div class="menu__img">
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash2.jpg" alt="À la française">
       </div>
       <div class="menu__restaurants">
-        <h1>La palette du goût</h1>
+        <h1>À la française</h1>
         <i id="heart-menu" class="far fa-heart"></i>
       </div>
     </section>
@@ -51,8 +51,8 @@
         <p class="title">ENTRÉES</p>
         <div class="card card-1">
           <div class="txt">
-            <h3 class="txt name">Fricassée d'escargot</h3>
-            <p class="txt accompaniment">Au piment d'espelette</p>
+            <h3 class="txt name">Tartare de poulpe acidulé</h3>
+            <p class="txt accompaniment">Aux zestes d'orange</p>
           </div>
           <div class="card price">25€</div>
           <div class="card validate">
@@ -61,8 +61,8 @@
         </div>
         <div class="card card-2">
           <div class="txt">
-            <h3 class="txt name">Foie gras de canard mi-cuit</h3>
-            <p class="txt accompaniment">Et ses copeaux de truffe noire</p>
+            <h3 class="txt name">Velouté de légumes d'antan</h3>
+            <p class="txt accompaniment">Carotte, panais, topinambour</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -71,8 +71,8 @@
         </div>
         <div class="card card-3">
           <div class="txt">
-            <h3 class="txt name">Oeuf au plat</h3>
-            <p class="txt accompaniment">Assaisonné à la truffe sur lit de caviar</p>
+            <h3 class="txt name">Soupe à l'oignon</h3>
+            <p class="txt accompaniment">Revisité</p>
           </div>
           <div class="card price">20€</div>
           <div class="card validate">
@@ -87,8 +87,8 @@
         <p class="title">PLATS</p>
         <div class="card card-1">
           <div class="txt">
-            <h3 class="txt name">Filet de boeuf aux herbes</h3>
-            <p class="txt accompaniment">Accompagné de sa ribambelle de légumes</p>
+            <h3 class="txt name">Coquilles Saint-Jacques</h3>
+            <p class="txt accompaniment">Accompagnées d'une purée de panais</p>
           </div>
           <div class="card price">40€</div>
           <div class="card validate">
@@ -97,8 +97,8 @@
         </div>
         <div class="card card-2">
           <div class="txt">
-            <h3 class="txt name">Parmentier de queue de boeuf</h3>
-            <p class="txt accompaniment">À la truffe noire sur sa purée de panais</p>
+            <h3 class="txt name">Magret de canard</h3>
+            <p class="txt accompaniment">Et parmentier de pommes de terre</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -107,8 +107,8 @@
         </div>
         <div class="card card-3">
           <div class="txt">
-            <h3 class="txt name">Filet de turbot</h3>
-            <p class="txt accompaniment">Aux agrumes</p>
+            <h3 class="txt name">Pigeonneau d'Ille-et-Vilaine</h3>
+            <p class="txt accompaniment">Sur son lit de gnocchis aux légumes</p>
           </div>
           <div class="card price">44€</div>
           <div class="card validate">
@@ -119,12 +119,12 @@
       <!-- End menu dish -->
 
       <!-- Menu dessert-->
-      <section class="part-menu">
+      <section>
         <p class="title">DESSERTS</p>
         <div class="card card-1">
           <div class="txt">
-            <h3 class="txt name">Paris-Brest</h3>
-            <p class="txt accompaniment">Revisité</p>
+            <h3 class="txt name">Pétales de violettes glacés</h3>
+            <p class="txt accompaniment">Et purée de noisettes</p>
           </div>
           <div class="card price">18€</div>
           <div class="card validate">
@@ -133,8 +133,8 @@
         </div>
         <div class="card card-2">
           <div class="txt">
-            <h3 class="txt name">Macaron au chocolat d'exception</h3>
-            <p class="txt accompaniment">Et glace à la vanille de Madagascar</p>
+            <h3 class="txt name">Fondant aux chocolat</h3>
+            <p class="txt accompaniment">Revisité</p>
           </div>
           <div class="card price">22€</div>
           <div class="card validate">
@@ -143,8 +143,8 @@
         </div>
         <div class="card card-3">
           <div class="txt">
-            <h3 class="txt name">Mousse au chocolat</h3>
-            <p class="txt accompaniment">Au piment d'Espelette et à la truffe noire</p>
+            <h3 class="txt name">Millefeuille croustillant</h3>
+            <p class="txt accompaniment">Myrtilles et pâte d'amande</p>
           </div>
           <div class="card price">23€</div>
           <div class="card validate">
