--- a/P3_Patrouillault_eric/menu-4.html
+++ b/P3_Patrouillault_eric/menu-4.html
@@ -12,7 +12,7 @@
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="sass/style.css" type="text/css">
-  <title>ohmyfood:La palette du goût</title>
+  <title>ohmyfood:Le délice des sens</title>
 
   <scrip src="app.js"></scrip>
 
@@ -34,10 +34,10 @@
     <!-- Image Menu -->
     <section>
       <div class="menu__img">
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
       </div>
       <div class="menu__restaurants">
-        <h1>La palette du goût</h1>
+        <h1>Le délice des sens</h1>
         <i id="heart-menu" class="far fa-heart"></i>
       </div>
     </section>
@@ -51,8 +51,8 @@
         <p class="title">ENTRÉES</p>
         <div class="card card-1">
           <div class="txt">
-            <h3 class="txt name">Fricassée d'escargot</h3>
-            <p class="txt accompaniment">Au piment d'espelette</p>
+            <h3 class="txt name">Tartare de thon</h3>
+            <p class="txt accompaniment">Assaisonné au yuzu</p>
           </div>
           <div class="card price">25€</div>
           <div class="card validate">
@@ -61,8 +61,8 @@
         </div>
         <div class="card card-2">
           <div class="txt">
-            <h3 class="txt name">Foie gras de canard mi-cuit</h3>
-            <p class="txt accompaniment">Et ses copeaux de truffe noire</p>
+            <h3 class="txt name">Bouchée de homard croustillant</h3>
+            <p class="txt accompaniment">Et sa farandole de petits légumes</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -71,8 +71,8 @@
         </div>
         <div class="card card-3">
           <div class="txt">
-            <h3 class="txt name">Oeuf au plat</h3>
-            <p class="txt accompaniment">Assaisonné à la truffe sur lit de caviar</p>
+            <h3 class="txt name">Velouté de cèpes</h3>
+            <p class="txt accompaniment">Aux truffes</p>
           </div>
           <div class="card price">20€</div>
           <div class="card validate">
@@ -87,8 +87,8 @@
         <p class="title">PLATS</p>
         <div class="card card-1">
           <div class="txt">
-            <h3 class="txt name">Filet de boeuf aux herbes</h3>
-            <p class="txt accompaniment">Accompagné de sa ribambelle de légumes</p>
+            <h3 class="txt name">Poulets rôtie aux herbes de Provence</h3>
+            <p class="txt accompaniment">Et sa crème de truffe</p>
           </div>
           <div class="card price">40€</div>
           <div class="card validate">
@@ -97,8 +97,8 @@
         </div>
         <div class="card card-2">
           <div class="txt">
-            <h3 class="txt name">Parmentier de queue de boeuf</h3>
-            <p class="txt accompaniment">À la truffe noire sur sa purée de panais</p>
+            <h3 class="txt name">Langouste rôtie</h3>
+            <p class="txt accompaniment">Et ses légumes de saison</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -107,8 +107,8 @@
         </div>
         <div class="card card-3">
           <div class="txt">
-            <h3 class="txt name">Filet de turbot</h3>
-            <p class="txt accompaniment">Aux agrumes</p>
+            <h3 class="txt name">Côte de boeuf Angus</h3>
+            <p class="txt accompaniment">Et sa purée de panais</p>
           </div>
           <div class="card price">44€</div>
           <div class="card validate">
@@ -123,8 +123,8 @@
         <p class="title">DESSERTS</p>
         <div class="card card-1">
           <div class="txt">
-            <h3 class="txt name">Paris-Brest</h3>
-            <p class="txt accompaniment">Revisité</p>
+            <h3 class="txt name">Farandole de desserts</h3>
+            <p class="txt accompaniment">Du chef</p>
           </div>
           <div class="card price">18€</div>
           <div class="card validate">
@@ -133,8 +133,8 @@
         </div>
         <div class="card card-2">
           <div class="txt">
-            <h3 class="txt name">Macaron au chocolat d'exception</h3>
-            <p class="txt accompaniment">Et glace à la vanille de Madagascar</p>
+            <h3 class="txt name">Crème brulée</h3>
+            <p class="txt accompaniment">Revisité</p>
           </div>
           <div class="card price">22€</div>
           <div class="card validate">
@@ -143,8 +143,8 @@
         </div>
         <div class="card card-3">
           <div class="txt">
-            <h3 class="txt name">Mousse au chocolat</h3>
-            <p class="txt accompaniment">Au piment d'Espelette et à la truffe noire</p>
+            <h3 class="txt name">Tiramisu</h3>
+            <p class="txt accompaniment">À la noisette</p>
           </div>
           <div class="card price">23€</div>
           <div class="card validate">
