--- a/P3_Patrouillault_eric/menu-2.html
+++ b/P3_Patrouillault_eric/menu-2.html
@@ -44,7 +44,7 @@
     <!-- End image menu-->
 
     <!-- Menu Starter Dish Dessert -->
-    <section class="menu-integral">
+    <div class="menu-integral">
 
       <!-- menu starter-->
       <section class="part-menu">
@@ -164,13 +164,13 @@
       </section>
       <!-- End menu dessert -->
 
-    </section>
+    </div>
     <!-- Menu Starter Dish Dessert -->
 
     <!-- button -->
-    <section class="search-and-command command-menu">
+    <div class="search-and-command command-menu">
       <button class="search-and-command command-menu search__btn" type="submit">Commander</button>
-    </section>
+    </div>
     <!-- End button -->
 
 
@@ -192,11 +192,11 @@
       <li class="footer footer__list footer__txt">
         <p>Mentions légales</p>
       </li>
-      <a href="mailto:ohmyfoodRetul1981@gustr.com">
-        <li class="footer footer__list footer__txt">
+      <li class="footer footer__list footer__txt">
+        <a href="mailto:ohmyfoodRetul1981@gustr.com">
           <p>Contact</p>
-        </li>
-      </a>
+        </a>
+      </li>
     </ul>
   </footer>
 
