--- a/P3_Patrouillault_eric/index.html
+++ b/P3_Patrouillault_eric/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  
+  <div class="overlay"></div>
   <div class="loader"></div>
   
   <header>
@@ -169,11 +169,11 @@
       <li class="footer footer__list footer__txt">
         <p>Mentions légales</p>
       </li>
-      <a href="mailto:ohmyfoodRetul1981@gustr.com">
-        <li class="footer footer__list footer__txt">
+      <li class="footer footer__list footer__txt">
+        <a href="mailto:ohmyfoodRetul1981@gustr.com">
           <p>Contact</p>
-        </li>
-      </a>
+        </a>
+      </li>
     </ul>
   </footer>
 
