--- a/P3_Patrouillault_eric/index.html
+++ b/P3_Patrouillault_eric/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="search-and-command">
-          <h1>Réservez le menu qui vous convient</h1>
+          <h1 id="typo">Réservez le menu qui vous convient</h1>
           <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
           <button class="btn search__btn" type="submit">Explorer nos restaurants</button>
         </div>
@@ -47,7 +47,7 @@
 
     <!-- Functionning -->
     <section class="functionning">
-      <h2>Fonctionnement</h2>
+      <h2 id="typo">Fonctionnement</h2>
       <!-- list -->
       <ol class="functionning__list">
         <li>
@@ -77,7 +77,7 @@
 
     <!-- List Restaurants -->
     <section class="cards-container">
-      <h2 class="restaurants__title">Restaurants</h2>
+      <h2 id="typo" class="restaurants__title">Restaurants</h2>
 
       <!-- Cards -->
       <ul class="restaurants__list">
