--- a/P3_Patrouillault_eric/index.html
+++ b/P3_Patrouillault_eric/index.html
@@ -13,7 +13,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="sass/style.css" type="text/css">
   <title>ohmyfood</title>
-  <scrip src="app.js"></scrip>
 </head>
 
 <body>
@@ -37,7 +36,7 @@
         </div>
 
         <div class="search-and-command">
-          <h1 id="typo">Réservez le menu qui vous convient</h1>
+          <h1 class="typo">Réservez le menu qui vous convient</h1>
           <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
           <button class="btn search__btn" type="submit">Explorer nos restaurants</button>
         </div>
@@ -47,7 +46,7 @@
 
     <!-- Functionning -->
     <section class="functionning">
-      <h2 id="typo">Fonctionnement</h2>
+      <h2 class="typo">Fonctionnement</h2>
       <!-- list -->
       <ol class="functionning__list">
         <li>
@@ -77,7 +76,7 @@
 
     <!-- List Restaurants -->
     <section class="cards-container">
-      <h2 id="typo" class="restaurants__title">Restaurants</h2>
+      <h2 class="restaurants__title typo">Restaurants</h2>
 
       <!-- Cards -->
       <ul class="restaurants__list">
