--- a/P3_Patrouillault_eric/menu-1.html
+++ b/P3_Patrouillault_eric/menu-1.html
@@ -13,9 +13,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="sass/style.css" type="text/css">
   <title>ohmyfood:La palette du goût</title>
-
-  <scrip src="app.js"></scrip>
-
 </head>
 
 <body>
@@ -49,33 +46,34 @@
       <!-- menu starter-->
       <section class="part-menu">
         <p class="title">ENTRÉES</p>
+
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Fricassée d'escargot</h3>
-            <p class="txt accompaniment">Au piment d'espelette</p>
+          <div class="card txt">
+            <h3 class="card txt name">Fricassée d'escargot</h3>
+            <p class="card txt accompaniment">Au piment d'espelette</p>
           </div>
-          <div class="card price">25€</div>
-          <div class="card validate">
+          <div class=" card price">25€</div>
+          <div class=" card validate to-left full-color">
             <i class="fas fa-check-circle " aria-hidden="true"></i>
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Foie gras de canard mi-cuit</h3>
-            <p class="txt accompaniment">Et ses copeaux de truffe noire</p>
+          <div class="card txt">
+            <h3 class="card txt name">Foie gras de canard mi-cuit</h3>
+            <p class="card txt accompaniment">Et ses copeaux de truffe noire</p>
           </div>
           <div class="card price">35€</div>
-          <div class="card validate">
+          <div class="card validate to-left full-color">
             <i class="fas fa-check-circle " aria-hidden="true"></i>
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Oeuf au plat</h3>
-            <p class="txt accompaniment">Assaisonné à la truffe sur lit de caviar</p>
+          <div class="card txt">
+            <h3 class="card txt name">Oeuf au plat</h3>
+            <p class="card txt accompaniment">Assaisonné à la truffe sur lit de caviar</p>
           </div>
           <div class="card price">20€</div>
-          <div class="card validate">
+          <div class="card validate to-left full-color">
             <i class="fas fa-check-circle " aria-hidden="true"></i>
           </div>
         </div>
@@ -86,9 +84,9 @@
       <section class="part-menu">
         <p class="title">PLATS</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Filet de boeuf aux herbes</h3>
-            <p class="txt accompaniment">Accompagné de sa ribambelle de légumes</p>
+          <div class="card txt">
+            <h3 class="card txt name">Filet de boeuf aux herbes</h3>
+            <p class="card txt accompaniment">Accompagné de sa ribambelle de légumes</p>
           </div>
           <div class="card price">40€</div>
           <div class="card validate">
@@ -96,9 +94,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Parmentier de queue de boeuf</h3>
-            <p class="txt accompaniment">À la truffe noire sur sa purée de panais</p>
+          <div class="card txt">
+            <h3 class="card txt name">Parmentier de queue de boeuf</h3>
+            <p class="card txt accompaniment">À la truffe noire sur sa purée de panais</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -106,9 +104,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Filet de turbot</h3>
-            <p class="txt accompaniment">Aux agrumes</p>
+          <div class="card txt">
+            <h3 class="card txt name">Filet de turbot</h3>
+            <p class="card txt accompaniment">Aux agrumes</p>
           </div>
           <div class="card price">44€</div>
           <div class="card validate">
@@ -122,9 +120,9 @@
       <section class="part-menu">
         <p class="title">DESSERTS</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Paris-Brest</h3>
-            <p class="txt accompaniment">Revisité</p>
+          <div class="card txt">
+            <h3 class="card txt name">Paris-Brest</h3>
+            <p class="card txt accompaniment">Revisité</p>
           </div>
           <div class="card price">18€</div>
           <div class="card validate">
@@ -132,9 +130,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Macaron au chocolat d'exception</h3>
-            <p class="txt accompaniment">Et glace à la vanille de Madagascar</p>
+          <div class="card txt">
+            <h3 class="card txt name">Macaron au chocolat d'exception</h3>
+            <p class="card txt accompaniment">Et glace à la vanille de Madagascar</p>
           </div>
           <div class="card price">22€</div>
           <div class="card validate">
@@ -142,9 +140,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Mousse au chocolat</h3>
-            <p class="txt accompaniment">Au piment d'Espelette et à la truffe noire</p>
+          <div class="card txt">
+            <h3 class="card txt name">Mousse au chocolat</h3>
+            <p class="card txt accompaniment">Au piment d'Espelette et à la truffe noire</p>
           </div>
           <div class="card price">23€</div>
           <div class="card validate">
