--- a/P3_Patrouillault_eric/menu-2.html
+++ b/P3_Patrouillault_eric/menu-2.html
@@ -13,9 +13,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="sass/style.css" type="text/css">
   <title>ohmyfood:La note enchantée</title>
-
-  <scrip src="app.js"></scrip>
-
 </head>
 
 <body>
@@ -50,9 +47,9 @@
       <section class="part-menu">
         <p class="title">ENTRÉES</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Ravioles de foie gras</h3>
-            <p class="txt accompaniment">Accompagnés de leur crème à la truffe</p>
+          <div class="card txt">
+            <h3 class="card txt name">Ravioles de foie gras</h3>
+            <p class="card txt accompaniment">Accompagnés de leur crème à la truffe</p>
           </div>
           <div class="card price">25€</div>
           <div class="card validate">
@@ -60,9 +57,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Caviar osciètre</h3>
-            <p class="txt accompaniment">Sur blini à la farine de blé noir</p>
+          <div class="card txt">
+            <h3 class="card txt name">Caviar osciètre</h3>
+            <p class="card txt accompaniment">Sur blini à la farine de blé noir</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -70,9 +67,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Homard et espuma de potiron</h3>
-            <p class="txt accompaniment">Mariné aux zestes d'orange</p>
+          <div class="card txt">
+            <h3 class="card txt name">Homard et espuma de potiron</h3>
+            <p class="card txt accompaniment">Mariné aux zestes d'orange</p>
           </div>
           <div class="card price">20€</div>
           <div class="card validate">
@@ -80,9 +77,9 @@
           </div>
         </div>
         <div class="card card-4">
-          <div class="txt">
-            <h3 class="txt name">Foie gras de canard cuit entier</h3>
-            <p class="txt accompaniment">Confiture de figue et pain toasté</p>
+          <div class="card txt">
+            <h3 class="card txt name">Foie gras de canard cuit entier</h3>
+            <p class="card txt accompaniment">Confiture de figue et pain toasté</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -96,9 +93,9 @@
       <section class="part-menu">
         <p class="title">PLATS</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Noix de coquilles Saint-Jacques</h3>
-            <p class="txt accompaniment">Sur lit de purée de céleri-rave</p>
+          <div class="card txt">
+            <h3 class="card txt name">Noix de coquilles Saint-Jacques</h3>
+            <p class="card txt accompaniment">Sur lit de purée de céleri-rave</p>
           </div>
           <div class="card price">40€</div>
           <div class="card validate">
@@ -106,9 +103,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Langoustine poêlée</h3>
-            <p class="txt accompaniment">Purée de patate douce</p>
+          <div class="card txt">
+            <h3 class="card txt name">Langoustine poêlée</h3>
+            <p class="card txt accompaniment">Purée de patate douce</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -116,9 +113,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Mijoté de queue de boeuf</h3>
-            <p class="txt accompaniment">Et riz sauvage aux zestes de citron</p>
+          <div class="card txt">
+            <h3 class="card txt name">Mijoté de queue de boeuf</h3>
+            <p class="card txt accompaniment">Et riz sauvage aux zestes de citron</p>
           </div>
           <div class="card price">44€</div>
           <div class="card validate">
@@ -129,12 +126,12 @@
       <!-- End menu dish -->
 
       <!-- Menu dessert-->
-      <section>
+      <section class="part-menu">
         <p class="title">DESSERTS</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Macaron noisette et chocolat</h3>
-            <p class="txt accompaniment">Glace au caramel brun et sel de Guérande</p>
+          <div class="card txt">
+            <h3 class="card txt name">Macaron noisette et chocolat</h3>
+            <p class="card txt accompaniment">Glace au caramel brun et sel de Guérande</p>
           </div>
           <div class="card price">18€</div>
           <div class="card validate">
@@ -142,9 +139,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Baba au rhum revisité</h3>
-            <p class="txt accompaniment">Avec son coulis de citron</p>
+          <div class="card txt">
+            <h3 class="card txt name">Baba au rhum revisité</h3>
+            <p class="card txt accompaniment">Avec son coulis de citron</p>
           </div>
           <div class="card price">22€</div>
           <div class="card validate">
@@ -152,9 +149,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Tarte au citron meringuée</h3>
-            <p class="txt accompaniment">Déstructurée</p>
+          <div class="card txt">
+            <h3 class="card txt name">Tarte au citron meringuée</h3>
+            <p class="card txt accompaniment">Déstructurée</p>
           </div>
           <div class="card price">23€</div>
           <div class="card validate">
