--- a/P3_Patrouillault_eric/menu-3.html
+++ b/P3_Patrouillault_eric/menu-3.html
@@ -13,9 +13,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="sass/style.css" type="text/css">
   <title>ohmyfood:À la française</title>
-
-  <scrip src="app.js"></scrip>
-
 </head>
 
 <body>
@@ -50,9 +47,9 @@
       <section class="part-menu">
         <p class="title">ENTRÉES</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Tartare de poulpe acidulé</h3>
-            <p class="txt accompaniment">Aux zestes d'orange</p>
+          <div class="card txt">
+            <h3 class="card txt name">Tartare de poulpe acidulé</h3>
+            <p class="card txt accompaniment">Aux zestes d'orange</p>
           </div>
           <div class="card price">25€</div>
           <div class="card validate">
@@ -60,9 +57,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Velouté de légumes d'antan</h3>
-            <p class="txt accompaniment">Carotte, panais, topinambour</p>
+          <div class="card txt">
+            <h3 class="card txt name">Velouté de légumes d'antan</h3>
+            <p class="card txt accompaniment">Carotte, panais, topinambour</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -70,9 +67,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Soupe à l'oignon</h3>
-            <p class="txt accompaniment">Revisité</p>
+          <div class="card txt">
+            <h3 class="card txt name">Soupe à l'oignon</h3>
+            <p class="card txt accompaniment">Revisité</p>
           </div>
           <div class="card price">20€</div>
           <div class="card validate">
@@ -86,9 +83,9 @@
       <section class="part-menu">
         <p class="title">PLATS</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Coquilles Saint-Jacques</h3>
-            <p class="txt accompaniment">Accompagnées d'une purée de panais</p>
+          <div class="card txt">
+            <h3 class="card txt name">Coquilles Saint-Jacques</h3>
+            <p class="card txt accompaniment">Accompagnées d'une purée de panais</p>
           </div>
           <div class="card price">40€</div>
           <div class="card validate">
@@ -96,9 +93,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Magret de canard</h3>
-            <p class="txt accompaniment">Et parmentier de pommes de terre</p>
+          <div class="card txt">
+            <h3 class="card txt name">Magret de canard</h3>
+            <p class="card txt accompaniment">Et parmentier de pommes de terre</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -106,9 +103,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Pigeonneau d'Ille-et-Vilaine</h3>
-            <p class="txt accompaniment">Sur son lit de gnocchis aux légumes</p>
+          <div class="card txt">
+            <h3 class="card txt name">Pigeonneau d'Ille-et-Vilaine</h3>
+            <p class="card txt accompaniment">Sur son lit de gnocchis aux légumes</p>
           </div>
           <div class="card price">44€</div>
           <div class="card validate">
@@ -119,12 +116,12 @@
       <!-- End menu dish -->
 
       <!-- Menu dessert-->
-      <section>
+      <section class="part-menu">
         <p class="title">DESSERTS</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Pétales de violettes glacés</h3>
-            <p class="txt accompaniment">Et purée de noisettes</p>
+          <div class="card txt">
+            <h3 class="card txt name">Pétales de violettes glacés</h3>
+            <p class="card txt accompaniment">Et purée de noisettes</p>
           </div>
           <div class="card price">18€</div>
           <div class="card validate">
@@ -132,9 +129,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Fondant aux chocolat</h3>
-            <p class="txt accompaniment">Revisité</p>
+          <div class="card txt">
+            <h3 class="card txt name">Fondant aux chocolat</h3>
+            <p class="card txt accompaniment">Revisité</p>
           </div>
           <div class="card price">22€</div>
           <div class="card validate">
@@ -142,9 +139,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Millefeuille croustillant</h3>
-            <p class="txt accompaniment">Myrtilles et pâte d'amande</p>
+          <div class="card txt">
+            <h3 class="card txt name">Millefeuille croustillant</h3>
+            <p class="card txt accompaniment">Myrtilles et pâte d'amande</p>
           </div>
           <div class="card price">23€</div>
           <div class="card validate">
