--- a/P3_Patrouillault_eric/menu-4.html
+++ b/P3_Patrouillault_eric/menu-4.html
@@ -13,9 +13,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="sass/style.css" type="text/css">
   <title>ohmyfood:Le délice des sens</title>
-
-  <scrip src="app.js"></scrip>
-
 </head>
 
 <body>
@@ -50,9 +47,9 @@
       <section class="part-menu">
         <p class="title">ENTRÉES</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Tartare de thon</h3>
-            <p class="txt accompaniment">Assaisonné au yuzu</p>
+          <div class="card txt">
+            <h3 class="card txt name">Tartare de thon</h3>
+            <p class="card txt accompaniment">Assaisonné au yuzu</p>
           </div>
           <div class="card price">25€</div>
           <div class="card validate">
@@ -60,9 +57,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Bouchée de homard croustillant</h3>
-            <p class="txt accompaniment">Et sa farandole de petits légumes</p>
+          <div class="card txt">
+            <h3 class="card txt name">Bouchée de homard croustillant</h3>
+            <p class="card txt accompaniment">Et sa farandole de petits légumes</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -70,9 +67,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Velouté de cèpes</h3>
-            <p class="txt accompaniment">Aux truffes</p>
+          <div class="card txt">
+            <h3 class="card txt name">Velouté de cèpes</h3>
+            <p class="card txt accompaniment">Aux truffes</p>
           </div>
           <div class="card price">20€</div>
           <div class="card validate">
@@ -86,9 +83,9 @@
       <section class="part-menu">
         <p class="title">PLATS</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Poulets rôtie aux herbes de Provence</h3>
-            <p class="txt accompaniment">Et sa crème de truffe</p>
+          <div class="card txt">
+            <h3 class="card txt name">Poulets rôtie aux herbes de Provence</h3>
+            <p class="card txt accompaniment">Et sa crème de truffe</p>
           </div>
           <div class="card price">40€</div>
           <div class="card validate">
@@ -96,9 +93,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Langouste rôtie</h3>
-            <p class="txt accompaniment">Et ses légumes de saison</p>
+          <div class="card txt">
+            <h3 class="card txt name">Langouste rôtie</h3>
+            <p class="card txt accompaniment">Et ses légumes de saison</p>
           </div>
           <div class="card price">35€</div>
           <div class="card validate">
@@ -106,9 +103,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Côte de boeuf Angus</h3>
-            <p class="txt accompaniment">Et sa purée de panais</p>
+          <div class="card txt">
+            <h3 class="card txt name">Côte de boeuf Angus</h3>
+            <p class="card txt accompaniment">Et sa purée de panais</p>
           </div>
           <div class="card price">44€</div>
           <div class="card validate">
@@ -122,9 +119,9 @@
       <section class="part-menu">
         <p class="title">DESSERTS</p>
         <div class="card card-1">
-          <div class="txt">
-            <h3 class="txt name">Farandole de desserts</h3>
-            <p class="txt accompaniment">Du chef</p>
+          <div class="card txt">
+            <h3 class="card txt name">Farandole de desserts</h3>
+            <p class="card txt accompaniment">Du chef</p>
           </div>
           <div class="card price">18€</div>
           <div class="card validate">
@@ -132,9 +129,9 @@
           </div>
         </div>
         <div class="card card-2">
-          <div class="txt">
-            <h3 class="txt name">Crème brulée</h3>
-            <p class="txt accompaniment">Revisité</p>
+          <div class="card txt">
+            <h3 class="card txt name">Crème brulée</h3>
+            <p class="card txt accompaniment">Revisité</p>
           </div>
           <div class="card price">22€</div>
           <div class="card validate">
@@ -142,9 +139,9 @@
           </div>
         </div>
         <div class="card card-3">
-          <div class="txt">
-            <h3 class="txt name">Tiramisu</h3>
-            <p class="txt accompaniment">À la noisette</p>
+          <div class="card txt">
+            <h3 class="card txt name">Tiramisu</h3>
+            <p class="card txt accompaniment">À la noisette</p>
           </div>
           <div class="card price">23€</div>
           <div class="card validate">
